<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lunch"
            android:icon="@drawable/logo"
            android:title="@string/your_lunch"/>

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_border_24"
            android:title="@string/your_favorite_restaurants"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting_white"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_white"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>