<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <!-- IMAGE VIEW -->

    <ImageView
        android:layout_width="338dp"
        android:layout_height="364dp"
        android:layout_margin="@dimen/default_large_margin"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo" />

    <!-- DESCRIPTION -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/main_activity_description"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_large_margin">

        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/loginButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_large_margin"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:onClick="handleLoginRegister"/>

    </LinearLayout>

</LinearLayout>
