<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageRestaurant"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_detail_220"
                    android:contentDescription="@string/restaurant_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pic_restaurant" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarDetails"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/restaurant_text_name"
                    style="@style/detail_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Le Zinc" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_text_name"
                    app:layout_constraintTop_toTopOf="@+id/restaurant_text_name">

                    <ImageView
                        android:id="@+id/restaurant_detail_star1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_top_15"
                        app:srcCompat="@drawable/ic_yellow_star_32dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/restaurant_detail_star2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_2"
                        app:srcCompat="@drawable/ic_yellow_star_32dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/restaurant_detail_star3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_2"
                        app:srcCompat="@drawable/ic_yellow_star_32dp"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/restaurant_text_adress"
                style="@style/text_adress_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12 rue du faubourg poissonnière" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_start_10"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/call_image"
                    android:layout_width="@dimen/image_button_50"
                    android:layout_height="@dimen/image_button_50"
                    android:background="@color/fui_transparent"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_call_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_call"
                    style="@style/text_style_button_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/linearLayout3"
                app:layout_constraintRight_toLeftOf="@+id/linearLayout4"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/like"
                    android:layout_width="@dimen/image_button_50"
                    android:layout_height="@dimen/image_button_50"
                    android:background="@color/fui_transparent"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_star_detail"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_Like"
                    style="@style/text_style_button_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like" />

                <ImageButton
                    android:id="@+id/favorite_restaurant"
                    android:layout_width="@dimen/image_button_50"
                    android:layout_height="@dimen/image_button_50"
                    android:background="@color/fui_transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_star_choice"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_favorite"
                    style="@style/text_style_button_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dislike"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/linearLayout2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/website"
                    android:layout_width="@dimen/image_button_50"
                    android:layout_height="@dimen/image_button_50"
                    android:background="@color/fui_transparent"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_earth"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/text_style_button_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_site" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/text_no_worker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_worker_has_chosen_this_restaurant"
                android:textSize="30sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_workers_restaurant_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                tools:listitem="@layout/item_worker"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_restaurant_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_fab_16"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#fff"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:maxImageSize="@dimen/image_fab_30"
        app:srcCompat="@drawable/ic_check_circle_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>